--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div id="w" itemscope itemtype="http://schema.org/Person">
 		<header class="clearfix">
 			<div id="info">			
-				<h1><span itemprop="name">Eric Huang</span></h1>
+				<h1><span itemprop="name">Eric Huang (TODO )</span></h1>
 				<h3><span itemprop="jobTitle">Young Developer Coach Program Leader</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 				  <span itemprop="addressLocality">XinYi</span>, 
@@ -39,7 +39,7 @@
 		
 		<section id="profile">
 			<h2>My Profile 個人檔案</h2>
-			<p itemprop="description">I'm a 21 year old web designer and developer working out of eastern Massachusetts. I have been coding websites ever since sophomore year of high school in my first web design class. Fast-forward a few years later I was landing freelance projects most of my junior and senior years. During this time I was also working part-time at Best Buy's Geek Squad division.</p>
+			<p itemprop="description">TODO I'm a 21 year old web designer and developer working out of eastern Massachusetts. I have been coding websites ever since sophomore year of high school in my first web design class. Fast-forward a few years later I was landing freelance projects most of my junior and senior years. During this time I was also working part-time at Best Buy's Geek Squad division.</p>
 			
 			<p>After graduating High School in summer 2009 I started writing on various web design blogs along with launching my own startup ideas. A few months later in September 2009 I spent a couple months studying at <a href="http://www.wpi.edu/">Worcester Polytechnic Institute</a> in Worcester, Massachsuetts. However I left in January 2010 to pursue a career on my own. I now work doing freelance writing and building side-projects in my spare time.</p>
 		</section>
@@ -72,11 +72,11 @@
 		
 		<section id="education">
 			<h2>Education 學歷</h2>
-			<p><span itemprop="alumniOf">Hudson High School</span> graduate of 2009.</p>
+			<p><span itemprop="alumniOf">TODO Hudson High School</span> graduate of 2009.</p>
 		</section>
 		
 		<section id="experience">
-			<h2>Work Experience 工作經驗</h2>
+			<h2>TODO Work Experience 工作經驗</h2>
 			<p>Freelance Web Designer/Developer ~ 2007-2009</p>
 			<p>Best Buy - Geek Squad In-Store Agent ~ 2008-2009</p>
 			<p>Freelance Writer for <span itemprop="worksFor">Hongkiat.com</span> ~ 2011-Present</p>
@@ -93,7 +93,7 @@
 		<section id="projects">
 			<h2>Recent projects 最近作品</h2>
 			<p>Many balls</p>
-    <p data-height="400" data-theme-id="0" data-slug-hash="yoYoOb" data-default-tab="result" data-user="erichuang2013" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/erichuang2013/pen/yoYoOb/"Play Many Ball</a> by eric (<a href="http://codepen.io/erichuang2017">@erichuang2017</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+    <p data-height="400" data-theme-id="0" data-slug-hash="GvZxgm" data-default-tab="result" data-user="erichuang2013" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/erichuang2013/pen/GvZxgm/"Play Many Ball</a> by eric.</p>
     
 		</section>
 	</div>
