--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Eric Huang Profolio Demo</title>
-  <meta name="author" content="Eric Huang">
+  <title>yoyoyoyochang Profolio Demo</title>
+  <meta name="author" content="yoyoyoyochang">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
@@ -21,7 +21,7 @@
 	<div id="w" itemscope itemtype="http://schema.org/Person">
 		<header class="clearfix">
 			<div id="info">			
-				<h1><span itemprop="name">Eric Huang (TODO )</span></h1>
+				<h1><span itemprop="name">yoyoyoyochang (TODO )</span></h1>
 				<h3><span itemprop="jobTitle">Young Developer Coach Program Leader</span></h3>
 				<small itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
 				  <span itemprop="addressLocality">XinYi</span>, 
@@ -39,7 +39,7 @@
 		
 		<section id="profile">
 			<h2>My Profile 個人檔案</h2>
-			<p itemprop="description">TODO I'm a 21 year old web designer and developer working out of eastern Massachusetts. I have been coding websites ever since sophomore year of high school in my first web design class. Fast-forward a few years later I was landing freelance projects most of my junior and senior years. During this time I was also working part-time at Best Buy's Geek Squad division.</p>
+			<p itemprop="description"></p>
 			
 			<p>After graduating High School in summer 2009 I started writing on various web design blogs along with launching my own startup ideas. A few months later in September 2009 I spent a couple months studying at <a href="http://www.wpi.edu/">Worcester Polytechnic Institute</a> in Worcester, Massachsuetts. However I left in January 2010 to pursue a career on my own. I now work doing freelance writing and building side-projects in my spare time.</p>
 		</section>
