--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="images/eric4.jpg" alt="Eric Huang avatar" itemprop="image" />
+				<img src="yoyoyoyochang.npg" alt="Eric Huang avatar" itemprop="image" />
 			</div>
 		</header>
 		
