--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div id="photo">
-				<img src="yoyoyoyochang.png" alt="Eric Huang avatar" itemprop="image" />
+				<img src="image/yoyoyoyochang.png" alt="Eric Huang avatar" itemprop="image" />
 			</div>
 		</header>
 		
