--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 			<h2>Recent projects 最近作品</h2>
 			<p>Many balls</p>
     <p data-height="400" data-theme-id="0" data-slug-hash="OjNwow" data-default-tab="result" data-user="yoyochang" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/erichuang2013/pen/GvZxgm/"Play Many Ball</a> by eric.</p>
+			<p>click in 10s</p>
     <p data-height="400" data-theme-id="0" data-slug-hash="BdzrWm" data-default-tab="result" data-user="yoyochang" data-embed-version="2" class="codepen">See the Pen <a href="http://codepen.io/erichuang2013/pen/GvZxgm/"Play Many Ball</a> by eric.</p>
 		
 		</section>
